# fm

./: !autogen.sh  !clean.sh  .gitignore  Makefile.am  Makefile.in  README  autogen-stuff.sh  autogen.sh  config.h.in  config.h.in~  configure.in  setup-gettext
fakehome/: associations.tcl  config.tcl
intl/: Makefile.in
mk/: init.mk  init.mk.in  objective.mk  rules.mk.in
nbproject/: Makefile-Default.mk  Makefile-impl.mk  configurations.xml  project.xml
nbproject/private/: configurations.xml
po/: ChangeLog  Makefile  Makefile.in  POTFILES.in  ru.po
src/: .depend  Makefile.in  action-chmod-iface.c  action-chmod-iface.h  action-chmod.c  action-choose_panel.c  action-chown-iface.c  action-chown-iface.h  action-chown.c  action-copy-iface.c  action-copy-iface.h  action-copy.c  action-copymove-iface.c  action-copymove-iface.h  action-copymove.c  action-copymove.h  action-delete-iface.c  action-delete-iface.h  action-delete.c  action-editsymlink.c  action-find-iface.c  action-find-iface.h  action-find.c  action-find.h  action-listing.c  action-listing.h  action-mkdir.c  action-move.c  action-operate.c  action-symlink.c  actions.c  actions.h  build-stamp.h  choose_panel.c  copy.c  deque.c  deque.h  dir.c  dir.h  dynstruct.c  (+56 more)
src/actions/: Makefile.in  action-chmod-iface.c  action-choose_panel.c  action-chown-iface.c  action-chown.c  action-copy.c  action-copymove-iface.c  action-copymove.c  action-copymove.h  action-create_file.c  action-delete.c  action-editsymlink.c  action-find-iface.c  action-find.c  action-listing.c  action-listing.h  action-mkdir.c  action-operate.c  action-symlink.c  actions.c  actions.h
src/tcl/: Makefile.in  associations.tcl  config.tcl  ext.c  ext.h  tcllib.c  tcllib.h  util.c  util.h
src/tcl/commands/: actions_cmd.c  bind_cmd.c  commands_list.c  commands_list.h  ext_cmd.c  iface_cmd.c  makeensemble.c  makeensemble.h
src/vfs/: Makefile.in  context.c  context.h  errcode.h  error.c  plugin.c  plugin.d  plugin.h  posix.h  url.c  url.h  util.c  vfs.c  vfs.h
src/vfs/plugins/: Makefile
src/vfs/plugins/file/: Makefile.in  main.c
src/vfs/plugins/localfs/: Makefile.in  localfs.c  main.c  mountlist.c  mountlist.h
src/widgets/: Makefile.in  widget-box.c  widget-box.h  widget-button.c  widget-button.h  widget-checkbox.c  widget-checkbox.h  widget-edit.c  widget-edit.h  widget-list.c  widget-list.h  widget-menu.c  widget-menu.h  widget-progress.c  widget-progress.h  widget-scrollbar.c  widget-scrollbar.h  widget-text.c  widget-text.h  widget-util.c  widget-util.h  widget-window.c  widget-window.h  widget.c  widget.h
t/: Makefile  test-all.sh  testlib.sh
t/vfs/: Makefile.in  main.c  make-test.sh  plug.c  test-00-init.sh  test-01-localfs.sh  test-02-open.sh  test-03-write.sh  test-04-read.sh  test-05-lseek.sh  test-06-close.sh  test-07-unlink.sh
