.SILENT:
ACLOCAL_AMFLAGS = -I m4

CFLAGS =
LDFLAGS = 

SUBDIRS = src

distuninstallcheck_listfiles = find . -type f -print | grep -v scrollkeeper

EXTRA_DIST = 

DISTCLEANFILES = 

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper

AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip

pkgconfigdir=${libdir}/pkgconfig
pkgconfig_DATA=
